<resources>
    <string name="app_name">ProyectoMov</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="inicio">Lista</string>
    <string name="aniadir">Añadir</string>
    <string name="cuenta">Cuenta</string>
    <string name="ajustes">Ajustes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_item_list">ItemList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="description">Género</string>
    <string name="image_icon">Image Icon</string>
    <string name="maker">Director</string>
    <string name="title">Título</string>
</resources>