<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".AddItemFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addItemFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:id="@+id/titleLinear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee"
                android:gravity="center_vertical"
                android:text="@string/title"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/teal_700" />

            <EditText
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee"
                android:hint="@string/title"
                android:inputType="text"
                android:maxLength="24"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/teal_500"
                android:textColorHint="@color/teal_less_500" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/makerLinear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/titleLinear">

            <TextView
                android:id="@+id/maker_tv"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee"
                android:gravity="center_vertical"
                android:text="@string/maker"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/teal_700" />

            <EditText
                android:id="@+id/maker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee"
                android:hint="@string/maker"
                android:inputType="text"
                android:maxLength="24"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/teal_500"
                android:textColorHint="@color/teal_less_500" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/descriptionLinear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/makerLinear">

            <TextView
                android:id="@+id/description_tv"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee"
                android:gravity="center_vertical"
                android:text="@string/description"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/teal_700" />

            <EditText
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee"
                android:hint="@string/description"
                android:inputType="text"
                android:maxLength="24"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/teal_500"
                android:textColorHint="@color/teal_less_500" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:gravity="center"
            android:label="@string/image_icon"
            app:layout_constraintBottom_toTopOf="@id/addcancelLinear"
            app:layout_constraintTop_toBottomOf="@id/descriptionLinear" />

        <LinearLayout
            android:id="@+id/addcancelLinear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/saveButton">

            <ImageButton
                android:id="@+id/add_gallery_image_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/selector_gallery"
                android:onClick="addGalleryPhoto" />

            <ImageButton
                android:id="@+id/add_image_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/selector_camera"
                android:onClick="addPhoto" />

            <ImageButton
                android:id="@+id/cancel_image_button"
                android:layout_width="47dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/selector_x"
                android:onClick="deletePhoto" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/saveButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.25"
                android:backgroundTint="@color/teal_700"
                android:fontFamily="@font/bungee"
                android:onClick="saveItem"
                android:text="@string/save"
                android:textAppearance="@android:style/TextAppearance.Medium" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>